tests/algorithms/transpiler/Zig/data_structures/kd_tree/example/example_usage.error
exit status 1
/workspace/mochi/tests/algorithms/transpiler/Zig/data_structures/kd_tree/example/example_usage.zig:123:255: error: use of undeclared identifier 'shifted_right'
/workspace/mochi/tests/algorithms/transpiler/Zig/data_structures/kd_tree/example/example_usage.zig:141:43: error: unused function parameter